# domain-discernibility

./: Analysis.ipynb  Cluster_analysis.ipynb  Extraction.ipynb  README.md  pyproject.toml  sentences.py  sentencizer.py  vectorizer.py
