[project]
name = "domain-discernibility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "gensim>=4.3.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
]
